# dxu-cpp

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.trae/rules/: git-commit-message.md  single-file-library-rules.md  unit-test.md
cmake/: catch2.cmake  dxu-version.cmake  version.cmake
include/dxu/: chrono.h  conversion.h  env_var.h  format.h  impl.h  release_assert.h  slice.h  small_vector.h  version.h.in
include/dxu/concurrency/: work_queue.h
include/dxu/lang/: contiguous_storage_iterator_facade.h
include/dxu/port/: cacheline.h  format.h  likely.h  nodiscard.h  shared_mutex.h
test/: chrono_test.cc  conversion_test.cc  env_var_test.cc  format_test.cc  runner.sh  slice_basic_test.cc  slice_pre_suf_test.cc  slice_search_test.cc  small_vector_test.cc  test_common.cc  test_common.h  work_queue_test.cc
test/except/: assert.cc
